MYB-1755: Prevent Firefox from showing scrollbars in explore_navigation

--- a/devwidgets/allcategories/css/allcategories.css
+++ b/devwidgets/allcategories/css/allcategories.css
@@ -143,6 +143,11 @@
     top:8px;
 }
 
+/* Prevent FireFox from showing scrollbars in explore_navigation */
+#explore_navigation {
+    overflow:hidden;
+}
+
 /* Drop shadow on explore_content interferes with tab UI */
 #explore_content {
     background: none;
